--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Poppins", sans-serif;
+}
+#root {
+  overflow: hidden;
+  position: relative;
+}
+html {
+  scroll-behavior: smooth;
+}
+.html-Tags::before {
+  content: "<html>";
+  position: absolute;
+  top: 0;
+  left: 2rem;
+  opacity: 0.7;
+  font-family: "La Belle Aurore", cursive;
+  color: #3b82f6;
+}
+.html-Tags::after {
+  content: "<html/>";
+  position: absolute;
+  bottom: 0;
+  left: 2rem;
+  opacity: 0.7;
+  font-family: "La Belle Aurore", cursive;
+  color: #3b82f6;
 }
